--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-default: -apple-system, BlinkMacSystemFont, "Neue Haas Grotesk Text Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,7 +18,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-default);
 }
 
 .text-shadow {
@@ -26,4 +27,23 @@ body {
 
 .backdrop-blur-bg {
   @apply bg-black/20 backdrop-blur-sm;
+}
+
+.clock {
+  font-family: var(--font-default);
+  font-size: 9.5rem;
+  font-weight: 500;
+  line-height: 1;
+}
+
+@media (max-width: 768px) {
+  .clock {
+    font-size: 7rem;
+  }
+}
+
+@media (max-width: 640px) {
+  .clock {
+    font-size: 5rem;
+  }
 }
